k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthmed-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: healthmed-api
  template:
    metadata:
      labels:
        app: healthmed-api
    spec:
      containers:
        - name: healthmed-api
          image: healthmed-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
