k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthmed-api
spec:
  selector:
    app: healthmed-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
