k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthmed-ingress
spec:
  rules:
    - host: healthmed.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthmed-api
                port:
                  number: 8080
